{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 23,
  "lineage": "05897e4b-0c6e-08df-9dbe-59621bfdfeed",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraformserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:568229488190:instance/i-0b704f21127969a74",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b704f21127969a74",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0aaa559c1cd1992fb",
            "private_dns": "ip-192-168-0-217.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.217",
            "public_ip": "3.84.31.126",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dde1f331211339dd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05c975d0b16577847",
            "tags": {
              "Name": "computeEngine"
            },
            "tags_all": {
              "Name": "computeEngine"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00b1098787d0d68ea"
            ]
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_security_group.test",
            "aws_subnet.subnets",
            "aws_vpc.ntiervpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ntierig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568229488190:internet-gateway/igw-04ec95dbd83ee7ff8",
            "id": "igw-04ec95dbd83ee7ff8",
            "owner_id": "568229488190",
            "tags": {
              "Name": "ntier-ig"
            },
            "tags_all": {
              "Name": "ntier-ig"
            },
            "vpc_id": "vpc-040d14ac33cbceb44"
          },
          "dependencies": [
            "aws_vpc.ntiervpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "publicroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04ec95dbd83ee7ff8",
            "id": "r-rtb-0d272bc77cdfb25071080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d272bc77cdfb2507",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ntierig",
            "aws_route_table.public",
            "aws_subnet.subnets",
            "aws_vpc.ntiervpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568229488190:route-table/rtb-0d272bc77cdfb2507",
            "id": "rtb-0d272bc77cdfb2507",
            "owner_id": "568229488190",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ntier-public"
            },
            "tags_all": {
              "Name": "ntier-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-040d14ac33cbceb44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.subnets",
            "aws_vpc.ntiervpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicrtassociations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e682f2593727904c",
            "route_table_id": "rtb-0d272bc77cdfb2507",
            "subnet_id": "subnet-05c975d0b16577847"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.subnets",
            "aws_vpc.ntiervpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568229488190:security-group/sg-00b1098787d0d68ea",
            "description": "Open http and ssh",
            "egress": [],
            "id": "sg-00b1098787d0d68ea",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "openhttp",
            "name_prefix": "",
            "owner_id": "568229488190",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sgtest"
            },
            "tags_all": {
              "Name": "sgtest"
            },
            "timeouts": null,
            "vpc_id": "vpc-040d14ac33cbceb44"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.subnets",
            "aws_vpc.ntiervpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2368201156",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00b1098787d0d68ea",
            "security_group_rule_id": "sgr-050ce4ec3a1b70e25",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.test",
            "aws_subnet.subnets",
            "aws_vpc.ntiervpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "websghttp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1001241713",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00b1098787d0d68ea",
            "security_group_rule_id": "sgr-08670c4f7732d8eee",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.test",
            "aws_subnet.subnets",
            "aws_vpc.ntiervpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568229488190:subnet/subnet-05c975d0b16577847",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c975d0b16577847",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "568229488190",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "webserver1"
            },
            "tags_all": {
              "Name": "webserver1"
            },
            "vpc_id": "vpc-040d14ac33cbceb44"
          },
          "dependencies": [
            "aws_vpc.ntiervpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568229488190:subnet/subnet-08ea17329bf36ed88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ea17329bf36ed88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "568229488190",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "webserver2"
            },
            "tags_all": {
              "Name": "webserver2"
            },
            "vpc_id": "vpc-040d14ac33cbceb44"
          },
          "dependencies": [
            "aws_vpc.ntiervpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568229488190:subnet/subnet-053dc07968ee322c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053dc07968ee322c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "568229488190",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "webserver3"
            },
            "tags_all": {
              "Name": "webserver3"
            },
            "vpc_id": "vpc-040d14ac33cbceb44"
          },
          "dependencies": [
            "aws_vpc.ntiervpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ntiervpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568229488190:vpc/vpc-040d14ac33cbceb44",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-02a065e75db9ca849",
            "default_route_table_id": "rtb-0617651a4912c048f",
            "default_security_group_id": "sg-0535f428abad6fa0a",
            "dhcp_options_id": "dopt-0615d90c9ceb2fbb2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-040d14ac33cbceb44",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0617651a4912c048f",
            "owner_id": "568229488190",
            "tags": {
              "Name": "ntier"
            },
            "tags_all": {
              "Name": "ntier"
            }
          }
        }
      ]
    }
  ]
}